Version 1.6: 2016-01-10
  - New: R wrapper integrates with kohonen package.
  - New: MATLAB wrapper integrates with soomtoolbox.
  - New: Better handling of CUDA compilation in the Python interface.
  - Changed: Throws an exception if GPU kernel is requested, but it was compiled without it. The earlier behaviour quietly defaulted to the CPU kernel.

Version 1.5.1: 2015-12-02
  - New: Neighborhood function can be chosen between Gaussian and bubble.
  - Fixed: R wrapper passes arrays with correct orientation.
  - Fixed: `io.cpp` is no longer required in the wrappers. An exception is thrown when needed.

Version 1.5: 2015-09-30
  - New: Python interface has visual capabilities.
  - New: Option for hexagonal grid.
  - New: Option for requesting compact support in updating the map.
  - New: Python, R, and MATLAB interfaces now allow passing an initial codebook.
  - Changed: Reduced memory use in calculating U-matrices.
  - Changed: Build system rebuilt and simplified.

Version 1.4.1: 2015-01-28
  - Better support for ICC.
  - Faster code when compiling with GCC.
  - Building instructions and documentation improved.
  - Bug fixes: portability for R, using native R random number generator.

Version 1.4: 2014-09-05
  - Better Windows support.
  - Completed CUDA support for Python and R interfaces.
  - Faster compilation by removing unnecessary flags for nvcc and support for CUDA 6.5.
  - Bug fixes: R version no longer needs separate code.

Version 1.3.1: 2014-04-10
  - Better I/O separation for the Python, R, and MATLAB interfaces.
  - Initial Windows support through GCC on Windows.
  - Bug fixes: major MPI initialization bug fixed.

Version 1.3: 2014-03-31

  - Learning rate parameter included.
  - Linear and exponential cooling strategies added for radius and learning rate.
  - CLI interface made more user-friendly.
  - Default radius depends on both X and Y of the map.
  - Bug fixes: CUDA build without MPI, best matching unit passing without MPI,